RIA-7933 Addendum uploaded - Existing HO notification